fix: align center breadcrumb

--- a/src/pages/ArticleDetailsPage/ui/ArticleDetailsPageHeader/ArticleDetailsPageHeader.module.scss
+++ b/src/pages/ArticleDetailsPage/ui/ArticleDetailsPageHeader/ArticleDetailsPageHeader.module.scss
@@ -1,6 +1,6 @@
 .ArticleDetailsPageHeader {
   .btnBack {
-    align-self: start ;
+    align-self: center ;
   }
   .btnEdit {
     align-self: end ;
